[package]
name = "cooplan-util"
version = "0.1.0"
edition = "2021"
description = "utlity functions used within Cooplan"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Asynchronous runtime & utilities
tokio = { version = "1", features = ["sync"] }

# Logging
log = "0.4.14"
